--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="florida">
-                <h2>Florida</h2>
+            <div class="destination" id="italy">
+                <h2>Italy</h2>
             </div>
 
-            <div class="destination" id="paris">
-                <h2>Paris</h2>
+            <div class="destination" id="england">
+                <h2>England</h2>
             </div>
         </div>
     </div>
